tests/NormalTests/paczka1/fuzzy1/89418934.err
Error in line 3: IznyAa3SE7 S700 85,9
Error in line 1: sW79 S700 16,2
Error in line 10: S391 S878 40,6
Error in line 14: iDd A826 15,0
Error in line 18: 82tIvNQFS4J S878 56,3
Error in line 20: 82tIvNQFS4J A826 14,8
Error in line 25: sW79 S700 15,5
Error in line 22: 82tIvNQFS4J S391 91,3
